apps/homebridge/homebridge.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homebridge
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homebridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      containers:
      - name: homebridge
        image: homebridge/homebridge:latest
        ports:
        - containerPort: 8581
        volumeMounts:
        - name: homebridge-data
          mountPath: /homebridge
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "0.5"
            memory: 512Mi
        readinessProbe:
          httpGet:
            path: /
            port: 8581
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
      hostNetwork: true
      volumes:
      - name: homebridge-data
        persistentVolumeClaim:
          claimName: homebridge-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge
spec:
  selector:
    app: homebridge
  ports:
    - protocol: TCP
      port: 8581
      targetPort: 8581
