apps/homebridge/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebridge-https
spec:
  hostnames:
  - homebridge.menia.cc
  parentRefs:
  - name: shared-gateway
    namespace: default
    sectionName: shared-https
  rules:
  - backendRefs:
    - name: homebridge
      port: 8581
